@@ -4,6 +4,7 @@
 
 - Java:
 -- sprintf(), printf()
+-- increment/decrement operations on native types
 -- support for primitive data types, work in progress: "byte", "short"
 
 9.019 cpan:Perlito5  2016-04-10
